nexus-collections/tests/ui/cannot_unlink_detached.stderr
error[E0308]: mismatched types
  --> tests/ui/cannot_unlink_detached.rs:13:17
   |
13 |     list.unlink(detached);
   |          ------ ^^^^^^^^ expected `ListSlot<u64, BoundedListSlab<u64>>`, found `DetachedListNode<u64, ...>`
   |          |
   |          arguments to this method are incorrect
   |
   = note: expected struct `ListSlot<u64, BoundedListSlab<u64>>`
              found struct `DetachedListNode<u64, BoundedListSlab<u64>>`
note: method defined here
  --> src/list.rs
   |
   |     pub fn unlink(&mut self, slot: ListSlot<T, S>) -> DetachedListNode<T, S> {
   |            ^^^^^^
